--- a/insurance/src/main/resources/static/home.html
+++ b/insurance/src/main/resources/static/home.html
@@ -576,7 +576,7 @@
         }
 
         .testimonial-text::before {
-            content: """;
+            content: "";
             position: absolute;
             left: 0;
             top: -5px;
